--- a/tutorials/Demo.Rmd
+++ b/tutorials/Demo.Rmd
@@ -82,7 +82,7 @@ Tip: if a working directory is not set manually, the function will default to th
 
 This script will be the way you execute the primary functions of this package and create a template for a stock assessment report. It can be helpful to save this script for later use or future assessments.
 
-![](images/new_script.png)
+![](images/new_script.PNG)
 
 ## Relative Paths
 
@@ -178,7 +178,7 @@ Optional:
 
 After selecting one of the two above options, you should have created a folder that contains .rda files containing tables and figures with their associated caption and alternative text (all pre-built for you).
 
-![](images/rda_folder.png)
+![](images/rda_folder.PNG)
 
 ## Run create_template
 
@@ -305,11 +305,11 @@ During processing, you will see progress for the template being built in the R c
 
 There will be a series of quarto (.qmd) files along with some others generated with the folder. The user will not need to modify the 'skeleton.qmd', but all other quarto files will need to be filled in. 
 
-![](images/example-pop-up.png)
+![](images/example-pop-up.PNG)
 
 Each section quarto file contains pre-built heading tags and subsections with details indicating what the user should touch on for each section. 
 
-![](images/example-section.png)
+![](images/example-section.PNG)
 
 The optional addition of new sections as indicated by the user in the `create_template` function will be blank with the exception of a pre-built header with the new section name. 
 
@@ -347,7 +347,7 @@ After filling out all sections (and leaving ones that are not applicable with a 
 quarto render SAR_USWC_Petrale_sole_skeleton.qmd
 ```
 
-![](images/example-pop-up-highlight.png)
+![](images/example-pop-up-highlight.PNG)
 
 ## Tips
 
